No nyt toimii overflow: scroll nätisti, ks. https://github.com/joelambert/ScrollFix/issues/2  Estetään rubberbandaus myös sivuilla joilla ei ole scrollielementtejä.

--- a/src/Apex/ApexScoreCardBundle/Resources/public/css/styles.css
+++ b/src/Apex/ApexScoreCardBundle/Resources/public/css/styles.css
@@ -1,3 +1,9 @@
+html, body {
+	height: 100%;
+	min-height: 100%;
+	overflow: hidden;
+}
+
 body {
 	margin: 0;
 	padding: 0;
@@ -7,7 +13,8 @@ body {
 //	background: url('img/wild_oliva.png') !important;
 //	background-color: black;
 //	background: black;
-	overflow-y: visible;
+	overflow: hidden;
+
 }
 	
 .ui-page.ui-body-c  {
@@ -16,6 +23,8 @@ body {
 //	background-color: black;
 	padding: 0;
 	margin: 0;
+	overflow: hidden;
+	
 } 
 
 #s_page {
@@ -25,15 +34,18 @@ body {
 #f_page {
 //	overflow: auto;
 	width: 100%;
+//	height: 100%;
+//	overflow: hidden;
 }
 	
 .header {
 	width: 100%;
 	height: 44px;
-//	position: fixed;
+	position: fixed;
 	top: 0px;
 	margin-top: 0px;
 	padding-top: 0px;
+//	-webkit-box-sizing: border-box;
 }
 
 .headerText {
@@ -48,10 +60,19 @@ body {
 	
 
 
-.header .ui-btn { margin: 0px; padding-left: 8px; padding-right: 8px; top: 4px; height: 34px; border-radius: 6px; }
+.header .ui-btn {
+	margin: 0px;
+	padding-left: 8px;
+	padding-right: 8px;
+	top: 4px;
+	height: 34px;
+	border-radius: 6px;
+}
 
-.header .ui-btn-inner { border: 0px; margin-top: 5px;}
- 
+.header .ui-btn-inner {
+	border: 0px;
+	margin-top: 5px;
+}
 
 
 /* #header .ui-btn { margin: 0px; padding: 0px; top: 5px; width: 44px; height: 34px; border-radius: 6px; }
@@ -680,22 +701,37 @@ a.ui-slider-handle {-webkit-transition: none; -moz-transition: none; } */
 }
 
 #f_roundList {
-	width: 100%;
+//	width: 100%;
 //	-webkit-overflow-scrolling: touch;
 //	-webkit-transform: translate3d(0,0,0);
+//	overflow: auto;
+
 }
 	
 #courseListWrap {
-	top:44px; bottom:40px; left:0;
+	top:44px; bottom: 0px; left:0;
 	width:100%;
-	overflow:auto;
+	overflow:scroll;
 	border: 0;
 	margin: 0;
 	width: 100%;
 	padding-top: 15px;
-//	-webkit-overflow-scrolling: touch;
+	-webkit-overflow-scrolling: touch;
 //	-webkit-transform: translate3d(0,0,0);
 }
+
+#roundListWrap {
+	top:44px; bottom: 0px; left:0;
+	width:100%;
+	overflow:scroll;
+	border: 0;
+	margin: 0;
+	width: 100%;
+	-webkit-overflow-scrolling: touch;
+//	-webkit-transform: translate3d(0,0,0);
+}
+
+
 
 #courseListWrap form {
 	padding-bottom: 0px !important;
@@ -704,7 +740,7 @@ a.ui-slider-handle {-webkit-transition: none; -moz-transition: none; } */
 	margin-right: 0px !important;
     width    : 100%;
     z-index  : 1;
-//   	-webkit-overflow-scrolling: touch;
+//  -webkit-overflow-scrolling: touch;
 //	-webkit-transform: translate3d(0,0,0);
 }
 
@@ -715,5 +751,84 @@ a.ui-slider-handle {-webkit-transition: none; -moz-transition: none; } */
 #courseList {
 	width: 100%;
 }
+
+.scrollInner {
+	top: 44px; bottom: 0px; left:0;
+	width:100%;
+	overflow:auto;
+	border: 0;
+	margin: 0;
+	width: 100%;
+	padding: 0px;
+    z-index  : 1;
+	min-height: 101%;
+//	overflow-y: scroll;
+//	overflow-x: hidden;
+}
+
+.scrollOuter
+{
+	position: absolute;
+	margin: 0px;
+	top: 44px;
+	left: 0px;
+	right: 0px;
+	bottom: 0px;
+	padding: 0px;
+//	overflow-y: scroll;
+//	overflow-x: hidden;
+	overflow: auto;
+	-webkit-overflow-scrolling: touch;
+//	background: silver;
+}
+
+.scrollMiddle {
+	position: absolute;
+	margin: 0px;
+	top: 0px;
+	left: 0px;
+	right: 0px;
+	bottom: 0px;
+	padding: 0px;
+//	overflow-y: scroll;
+//	overflow-x: hidden;
+	overflow: auto;
+
+	-webkit-overflow-scrolling: touch;
+}
+/*
+.scrollfix1 {
+    display:-webkit-box;
+    -webkit-box-orient:vertical;
+    -webkit-box-flex:1;
+     overflow:auto;
+    -webkit-overflow-scrolling: touch;
+}
+
+
+.scrollfix1Wrap {
+    display:-webkit-box;
+    -webkit-box-orient:vertical;
+    -webkit-box-flex:1;
+    overflow:auto;
+    margin-bottom:-1px;
+}
+ */
+
+
+/*
+	top: 44;
+	bottom: 0px;
+	left: 0px;
+	width: 100%;
+	border: 0;
+	margin: 0;
+	padding-bottom: 0px !important;
+	margin-bottom: 0px !important;
+    margin-left     : 0px !important;
+	margin-right: 0px !important; */
+
+	
+
 
 
